# travel-carbon

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  calculate_distances.py  carbon_emission_integrated new.html  create_international_test.py  create_test_excel.py  csv-to-xlsx-converter.html  diagnose.py  excel_with_location.html  force_gui.py  install_requirements.sh  launch_gui.py  map_utils.py  map_zoom_demo.py  process_travel_data.py  process_travel_data_AI.py  process_travel_data_openpyxl.py  pyproject.toml  start_gui.py  test_geo_mapping.py  test_tkinter.py  travel-location-extractor.html  travel_distance_calculator_gui_cached.py  travel_distance_calculator_gui_cached_efficient.py  使用說明_完整處理所有資料.md  國際航線測試資料.csv  智能優化版使用說明.md
ADRs/: 0001-use-osrm-for-routing.md  README.md  template.md
docs/: JOSS_CHECKLIST.md  JOSS_SUBMISSION.md  PATH_A_PROGRESS_2026-07-11.md  RESEARCH_DECISIONS.md  VENUE_MATRIX_travel_carbon.md  emission_factors_notes.md  使用手冊.md  多AI審議_論文定位_PROMPT.md  專案文件架構指南.md  後續開發建議.md  技術指南.md  論文可行性與文獻研究_2026-07-11.md
examples/: README.md  sample_travel_gold.csv  sample_travel_gold_50.csv  sample_travel_records.csv
paper/: CITATIONS_VERIFIED.md  PAPER_E_EdTech_outline.md  PAPER_E_curriculum_alignment.md  application_draft.md  build_with_refs.sh  paper.bib  paper.md  references.bib
teaching/: README.md  interview_guide_v0.1.md  interview_sampling_matrix.md  lesson_plan_3sessions.md  survey_v0.1.md  survey_v0.2.md
tests/: test_carbon.py  test_distance.py  test_eval_and_maps_meta.py  test_factors_and_pipeline.py  (+3 more)
(+28 files in other folders)
