[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-carbon"
version = "0.1.0"
description = "Distance-based Scope 3 Category 6 helpers and desktop workflow for Taiwan HEI business-travel ledgers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hung-Yi Lai" }]
keywords = [
  "greenhouse-gas",
  "scope-3",
  "business-travel",
  "higher-education",
  "taiwan",
  "carbon-footprint",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pandas>=1.3",
  "openpyxl>=3.0",
  "xlsxwriter>=3.0",
  "folium>=0.12",
  "geopy>=2.2",
  "requests>=2.25",
  "pillow>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
maps = ["selenium>=4.0"]

[project.urls]
Homepage = "https://github.com/PLACEHOLDER/travel-carbon"
Documentation = "https://github.com/PLACEHOLDER/travel-carbon#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
